@@ -49,6 +49,8 @@ Chronological list of authors
   - Robert McGibbon
   - Richard J. Gowers
   - Alejandro Bernardin
+2014
+  - Matthieu Chavent
 
 External code
 -------------
