@@ -5,7 +5,7 @@ Multicore 2D streamplot Python library for MDAnalysis --- :mod:`MDAnalysis.visua
 :Authors: Tyler Reddy and Matthieu Chavent
 :Year: 2014
 :Copyright: GNU Public License v3
-:Citation: [Chavent_and_Reddy_2014]_
+:Citation: [Chavent2014]_
 
 .. autofunction:: generate_streamlines
 
@@ -14,7 +14,7 @@ Multicore 2D streamplot Python library for MDAnalysis --- :mod:`MDAnalysis.visua
 try:
     import matplotlib, matplotlib.nxutils
 except ImportError:
-    raise ImportError('2d streamplot module requires: matplotlib.nxutils for its points_inside_poly method') #deprecated, aim to remove dependency in future
+    raise ImportError('2d streamplot module requires: matplotlib.nxutils for its points_inside_poly method. The installation instructions for the matplotlib module can be found here: http://matplotlib.org/faq/installing_faq.html?highlight=install') #deprecated, aim to remove dependency in future
 
 import MDAnalysis
 import multiprocessing
@@ -123,7 +123,7 @@ def generate_streamlines(coordinate_file_path,trajectory_file_path,grid_spacing,
         **coordinate_file_path** : str
             Absolute path to the coordinate file
         **trajectory_file_path** : str
-            Absolute path to the trajectory file. It will normally be desirable to filter the trajectory with a tool such as GROMACS g_filter (see [Chavent_and_Reddy_2014]_)
+            Absolute path to the trajectory file. It will normally be desirable to filter the trajectory with a tool such as GROMACS g_filter (see [Chavent2014]_)
         **grid_spacing** : float
             The spacing between grid lines (angstroms)
         **MDA_selection** : str
@@ -174,7 +174,7 @@ def generate_streamlines(coordinate_file_path,trajectory_file_path,grid_spacing,
     
     .. image:: testing_streamline.png
 
-    .. [Chavent_and_Reddy_2014] Chavent, M.\*, Reddy, T.\*, Dahl, C.E., Goose, J., Jobard, B., and Sansom, M.S.P. (2014) Methodologies for the analysis of instantaneous lipid diffusion in MD simulations of large membrane systems. *Faraday Discussions* **169**: **Accepted**
+    .. [Chavent2014] Chavent, M.\*, Reddy, T.\*, Dahl, C.E., Goose, J., Jobard, B., and Sansom, M.S.P. (2014) Methodologies for the analysis of instantaneous lipid diffusion in MD simulations of large membrane systems. *Faraday Discussions* **169**: **Accepted**
 
     '''
     #work out the number of cores to use:
@@ -182,7 +182,7 @@ def generate_streamlines(coordinate_file_path,trajectory_file_path,grid_spacing,
         num_cores = multiprocessing.cpu_count() #use all available cores
     else: 
         num_cores = num_cores #use the value specified by the user
-        assert isinstance(num_cores,(int,long)), "The number of specified cores must (of course) be an integer."
+        #assert isinstance(num_cores,(int,long)), "The number of specified cores must (of course) be an integer."
     numpy.seterr(all='warn',over='raise')
     parent_list_deltas = [] #collect all data from child processes here
     def log_result_to_parent(delta_array):
